cmake_minimum_required(VERSION 3.2)

PROJECT(luautf8)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUAUTF8_VERSION_MAJOR "1")
SET(LUAUTF8_VERSION_MINOR "0")
SET(LUAUTF8_VERSION_PATCH "1")
SET(LUAUTF8_VERSION "${LUAUTF8_VERSION_MAJOR}.${LUAUTF8_VERSION_MINOR}.${LUAUTF8_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUAUTF8_VERSION}")

ADD_DEFINITIONS(-DUSE_LUAUTF8)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB DMLUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
)

LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

FILE(GLOB LUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
)

FILE(GLOB LUAUTF8_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/*.h
)

IF (WIN32)
    LIST(APPEND LUAUTF8_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE LUAUTF8TEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luautf8 SHARED ${LUAUTF8_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/luautf8/luautf8_module.def)
    TARGET_LINK_LIBRARIES(luautf8 lua53)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luautf8test ${LUAUTF8TEST_SOURCES})
    TARGET_LINK_LIBRARIES(luautf8test luautf8)
    
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
    SET_TARGET_PROPERTIES(luautf8 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")
    SET_TARGET_PROPERTIES(luautf8test PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
ELSEIF (APPLE)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luautf8 SHARED ${LUAUTF8_SOURCES})
    TARGET_LINK_LIBRARIES(luautf8 lua53)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luautf8test ${LUAUTF8TEST_SOURCES})
    TARGET_LINK_LIBRARIES(luautf8test luautf8)
ELSEIF (UNIX)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luautf8 SHARED ${LUAUTF8_SOURCES})
    TARGET_LINK_LIBRARIES(luautf8 lua53)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53 m)
    
    ADD_EXECUTABLE(luautf8test ${LUAUTF8TEST_SOURCES})
    TARGET_LINK_LIBRARIES(luautf8test luautf8)
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET luautf8test
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:luautf8test>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS luautf8
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUAUTF8_LIBS "luautf8")
#MARK_AS_ADVANCED(${LUAUTF8_LIBS})